--- a/desafio-1/pom.xml
+++ b/desafio-1/pom.xml
@@ -82,6 +82,18 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+	<dependency>
+		<groupId>org.apache.camel</groupId>
+		<artifactId>camel-xstream</artifactId>
+		<version>2.16.1</version>
+	</dependency>
+
+	<dependency>
+		<groupId>com.thoughtworks.xstream</groupId>
+		<artifactId>xstream</artifactId>
+		<version>1.4.8</version>
+	</dependency>
     
   </dependencies>
   
