--- a/desafio-1/pom.xml
+++ b/desafio-1/pom.xml
@@ -94,6 +94,18 @@
 		<artifactId>xstream</artifactId>
 		<version>1.4.8</version>
 	</dependency>
+
+	<dependency>
+		<groupId>org.apache.camel</groupId>
+		<artifactId>camel-jdbc</artifactId>
+		<version>${camel-version}</version>
+	</dependency>
+
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.36</version>
+	</dependency>
     
   </dependencies>
   
