--- a/camel-alura/pom.xml
+++ b/camel-alura/pom.xml
@@ -71,7 +71,13 @@
 		<groupId>org.apache.logging.log4j</groupId>
 		<artifactId>log4j-slf4j-impl</artifactId>
 		<version>2.4</version>
-	</dependency>  
+	</dependency>
+
+	<dependency>
+		<groupId>org.apache.camel</groupId>
+		<artifactId>camel-velocity</artifactId>
+		<version>2.16.1</version>
+	</dependency>
   
 <!-- 	<dependency> -->
 <!-- 		<groupId>org.apache.camel</groupId> -->
